@@ -93,7 +93,18 @@ AVR will be defined as well when using the standard levels gnu89
     __AVR_MEGA__<BR>
     __AVR_2_BYTE_PC__&nbsp;[2]
     </td>
-    <td>"Classic" CPU core, 16 KB to 128 KB of ROM</td>
+    <td>"Classic" CPU core, 16 KB to 64 KB of ROM</td>
+  </tr>
+  <tr>
+    <td>avr31</td>
+    <td>
+    __AVR_ARCH__=31<BR>
+    __AVR_MEGA__<BR>
+    __AVR_HAVE_RAMPZ__[4]<BR>
+    __AVR_HAVE_ELPM__[4]<BR>
+    __AVR_2_BYTE_PC__&nbsp;[2]
+    </td>
+    <td>"Classic" CPU core, 128 KB of ROM</td>
   </tr>
   <tr>
     <td>avr35&nbsp;[3]</td>
@@ -104,7 +115,7 @@ AVR will be defined as well when using the standard levels gnu89
     __AVR_HAVE_LPMX__&nbsp;[1]<BR>
     __AVR_2_BYTE_PC__&nbsp;[2]
     </td>
-    <td>"Classic" CPU core with 'MOVW' and 'LPM Rx, Z[+]' instruction, 16 KB to 128 KB of ROM</td>
+    <td>"Classic" CPU core with 'MOVW' and 'LPM Rx, Z[+]' instruction, 16 KB to 64 KB of ROM</td>
   </tr>
   <tr>
     <td>avr4</td>
@@ -127,9 +138,25 @@ AVR will be defined as well when using the standard levels gnu89
     __AVR_HAVE_MOVW__&nbsp;[1]<BR>
     __AVR_HAVE_LPMX__&nbsp;[1]<BR>
     __AVR_HAVE_MUL__&nbsp;[1]<BR>
+    __AVR_HAVE_RAMPZ__[4]<BR>
+    __AVR_HAVE_ELPM__[4]<BR>
+    __AVR_HAVE_ELPMX__[4]<BR>
     __AVR_2_BYTE_PC__&nbsp;[2]
     </td>
-    <td>"Enhanced" CPU core, 16 KB to 128 KB of ROM</td>
+    <td>"Enhanced" CPU core, 16 KB to 64 KB of ROM</td>
+  </tr>
+  <tr>
+    <td>avr51</td>
+    <td>
+    __AVR_ARCH__=51<BR>
+    __AVR_MEGA__<BR>
+    __AVR_ENHANCED__<BR>
+    __AVR_HAVE_MOVW__&nbsp;[1]<BR>
+    __AVR_HAVE_LPMX__&nbsp;[1]<BR>
+    __AVR_HAVE_MUL__&nbsp;[1]<BR>
+    __AVR_2_BYTE_PC__&nbsp;[2]
+    </td>
+    <td>"Enhanced" CPU core, 128 KB of ROM</td>
   </tr>
   <tr>
     <td>avr6&nbsp;[2]</td>
@@ -140,6 +167,9 @@ AVR will be defined as well when using the standard levels gnu89
     __AVR_HAVE_MOVW__&nbsp;[1]<BR>
     __AVR_HAVE_LPMX__&nbsp;[1]<BR>
     __AVR_HAVE_MUL__&nbsp;[1]<BR>
+    __AVR_HAVE_RAMPZ__[4]<BR>
+    __AVR_HAVE_ELPM__[4]<BR>
+    __AVR_HAVE_ELPMX__[4]<BR>
     __AVR_3_BYTE_PC__&nbsp;[2]
     </td>
     <td>"Enhanced" CPU core, 256 KB of ROM</td>
@@ -148,7 +178,8 @@ AVR will be defined as well when using the standard levels gnu89
   <p>
   [1] New in GCC 4.2<BR>
   [2] Unofficial patch for GCC 4.1<BR>
-  [3] New in GCC 4.2.3 
+  [3] New in GCC 4.2.3<BR>
+  [4] New in GCC 4.3 
   </p>
   </p>
   <p>
@@ -203,10 +234,10 @@ AVR will be defined as well when using the standard levels gnu89
   <tr><td>avr2/avr25&nbsp;[1]</td><td>attiny85</td><td>__AVR_ATtiny85__</td></tr>
   <tr><td>avr2/avr25&nbsp;[1]</td><td>attiny861</td><td>__AVR_ATtiny861__</td></tr>
   <tr><td>avr2/avr25&nbsp;[1]</td><td>attiny88</td><td>__AVR_ATtiny88__</td></tr>
-  <tr><td>avr3</td><td>atmega103</td><td>__AVR_ATmega103__</td></tr>
   <tr><td>avr3</td><td>atmega603</td><td>__AVR_ATmega603__</td></tr>
   <tr><td>avr3</td><td>at43usb320</td><td>__AVR_AT43USB320__</td></tr>
   <tr><td>avr3</td><td>at43usb355</td><td>__AVR_AT43USB355__</td></tr>
+  <tr><td>avr3/avr31&nbsp;[3]</td><td>atmega103</td><td>__AVR_ATmega103__</td></tr>
   <tr><td>avr3/avr35&nbsp;[2]</td><td>at90usb82</td><td>__AVR_AT90USB82__</td></tr>
   <tr><td>avr3/avr35&nbsp;[2]</td><td>at90usb162</td><td>__AVR_AT90USB162__</td></tr>
   <tr><td>avr3</td><td>at76c711</td><td>__AVR_AT76C711__</td></tr>
@@ -227,15 +258,8 @@ AVR will be defined as well when using the standard levels gnu89
   <tr><td>avr5</td><td>at90pwm316</td><td>__AVR_AT90PWM316__</td></tr>
   <tr><td>avr5</td><td>at90can32</td><td>__AVR_AT90CAN32__</td></tr>
   <tr><td>avr5</td><td>at90can64</td><td>__AVR_AT90CAN64__</td></tr>
-  <tr><td>avr5</td><td>at90can128</td><td>__AVR_AT90CAN128__</td></tr>
   <tr><td>avr5</td><td>at90usb646</td><td>__AVR_AT90USB646__</td></tr>
   <tr><td>avr5</td><td>at90usb647</td><td>__AVR_AT90USB647__</td></tr>
-  <tr><td>avr5</td><td>at90usb1286</td><td>__AVR_AT90USB1286__</td></tr>
-  <tr><td>avr5</td><td>at90usb1287</td><td>__AVR_AT90USB1287__</td></tr>
-  <tr><td>avr5</td><td>atmega128</td><td>__AVR_ATmega128__</td></tr>
-  <tr><td>avr5</td><td>atmega1280</td><td>__AVR_ATmega1280__</td></tr>
-  <tr><td>avr5</td><td>atmega1281</td><td>__AVR_ATmega1281__</td></tr>
-  <tr><td>avr5</td><td>atmega1284p</td><td>__AVR_ATmega1284P__</td></tr>
   <tr><td>avr5</td><td>atmega16</td><td>__AVR_ATmega16__</td></tr>
   <tr><td>avr5</td><td>atmega161</td><td>__AVR_ATmega161__</td></tr>
   <tr><td>avr5</td><td>atmega162</td><td>__AVR_ATmega162__</td></tr>
@@ -271,6 +295,13 @@ AVR will be defined as well when using the standard levels gnu89
   <tr><td>avr5</td><td>atmega649</td><td>__AVR_ATmega649__</td></tr>
   <tr><td>avr5</td><td>atmega6490</td><td>__AVR_ATmega6490__</td></tr>
   <tr><td>avr5</td><td>at94k</td><td>__AVR_AT94K__</td></tr>
+  <tr><td>avr5/avr51&nbsp;[3]</td><td>atmega128</td><td>__AVR_ATmega128__</td></tr>
+  <tr><td>avr5/avr51&nbsp;[3]</td><td>atmega1280</td><td>__AVR_ATmega1280__</td></tr>
+  <tr><td>avr5/avr51&nbsp;[3]</td><td>atmega1281</td><td>__AVR_ATmega1281__</td></tr>
+  <tr><td>avr5/avr51&nbsp;[3]</td><td>atmega1284p</td><td>__AVR_ATmega1284P__</td></tr>
+  <tr><td>avr5/avr51&nbsp;[3]</td><td>at90can128</td><td>__AVR_AT90CAN128__</td></tr>
+  <tr><td>avr5/avr51&nbsp;[3]</td><td>at90usb1286</td><td>__AVR_AT90USB1286__</td></tr>
+  <tr><td>avr5/avr51&nbsp;[3]</td><td>at90usb1287</td><td>__AVR_AT90USB1287__</td></tr>
   <tr><td>avr6</td><td>atmega2560</td><td>__AVR_ATmega2560__</td></tr>
   <tr><td>avr6</td><td>atmega2561</td><td>__AVR_ATmega2561__</td></tr>
 
@@ -278,7 +309,8 @@ AVR will be defined as well when using the standard levels gnu89
   </p>
   <p>
   [1] 'avr25' architecture is new in GCC 4.2<BR>
-  [2] 'avr35' architecture is new in GCC 4.2.3
+  [2] 'avr35' architecture is new in GCC 4.2.3<BR>
+  [3] 'avr31' and 'avr51' architectures is new in GCC 4.3
   </p>
 
 - \c -morder1
